SERVER-54701 Wait for majority write concern after shard index creation